# kinect_teleoperate

./: CMakeLists.txt  README.md
src/kinect_teleoperate_robot/: CMakeLists.txt  main.cpp
